--- a/Productos/Cafe_Vainilla.html
+++ b/Productos/Cafe_Vainilla.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -40,30 +39,28 @@
             </div>
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
-
-       
                     <li class="nav-item">
                         <a href="../../../index.html" class="navbar-link" data-nav-link>Inicio</a>
-                      </li>
-            
-                      <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a href="./Informacion/Informacion.html" class="navbar-link" data-nav-link>informacion</a>
-                      </li>
-
+                    </li>
                 </ul>
             </nav>
-
-
         </div>
     </header>
+
     <div class="inicio">
         <img src="../assets/images/Bolsa-Café.png" alt="">
         <br>
-        <h1>Vainilla</h1>
-        <h1>Galeno Coffee</h1>
+        <h1 id="nombreCafe2">Vainilla</h1> <!-- Corregido el id -->
+        <h1 id="nombreCafe">Galeno Coffee</h1>
     </div>
+
     <br>
+
     <div class="detalle">
+        <!-- Información del café -->
         <div class="lineas">
             <h1>Variedad:</h1>
             <p>Catuai, Parainema</p>
@@ -93,20 +90,18 @@
             <p>Finca Hope, El Arenal</p>
         </div>
         <br>
-        <a href="">
-            <button><i class="fa-brands fa-whatsapp"></i> Comprar Café</button>
-        </a>
+        <button id="comprarBtn"><i class="fa-brands fa-whatsapp"></i> Comprar Café</button>
     </div>
 
     <div class="info-cafe">
         <h1 class="Name">Beneficios de la Vainilla</h1>
         <p>Desde la antigüedad, la vainilla es utilizada para dar sabor y olor a muchas recetas, y se ha convertido en
             un ingrediente indispensable en la repostería, heladería y bollería.
-<br><br>
+            <br><br>
             <strong>Cuida el sistema digestivo:</strong> la vainilla colabora en desinflamar los intestinos, alivia los dolores
             estomacales y favorece la digestión.
             <br><br>
-           <strong> Propiedades antisépticas:</strong> la vainilla tiene propiedades antisépticas y
+            <strong>Propiedades antisépticas:</strong> la vainilla tiene propiedades antisépticas y
             analgésicas que ayudan a aliviar los dolores y a prevenir infecciones.
             <br><br>
             <strong>Estimulante:</strong> la vainilla contiene
@@ -116,12 +111,13 @@
             <strong>Antioxidante:</strong>  la vainilla tiene propiedades antioxidantes lo que ayuda a combatir los radicales
             libres.
             <br><br>
-             <strong>Cuida de nuestro hígado:</strong>  la vainilla tonifica el hígado después de intoxicaciones
+            <strong>Cuida de nuestro hígado:</strong>  la vainilla tonifica el hígado después de intoxicaciones
             alimentarias.
             <br><br>
             <strong>Fortalece el sistema inmunológico:</strong> la vainilla fortalece las defensas del organismo y protege
             el sistema inmunológico.</p>
     </div>
+
     <div class="imagne-incio-info">
         <img class="Parainema" src="../assets/images/_MG_5001(1).JPG" alt="">
     </div>
@@ -131,12 +127,23 @@
     <img class="Lema" src="../assets/images/Lema.png" alt="">
     <br>
 
+    <script>
+        document.getElementById('comprarBtn').addEventListener('click', function () {
+            var nombreCafe = document.getElementById('nombreCafe').innerText;
+            var nombreCafe2 = document.getElementById('nombreCafe2').innerText;
+            var mensaje = "Estoy interesado en el café " + nombreCafe + " " + nombreCafe2;
+            var numeroWhatsapp = "50584628930";
+            var url = "https://api.whatsapp.com/send?phone=" + numeroWhatsapp + "&text=" + encodeURIComponent(mensaje);
+
+            window.open(url, '_blank');
+        });
+    </script>
+
     <a href="#top" class="back-top-btn" aria-label="Back to top" data-back-top-btn>
         <ion-icon name="chevron-up"></ion-icon>
     </a>
 
     <script src="../assets/js/script.js" defer></script>
-
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
